--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,15 @@
 <!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<import src="/zanui/field/index.wxml" />
+<scroll-view scroll-y="true">
+   <view class="zan-panel">
+    <view class="zan-cell" bindtap="redirect" data-id="1">
+      <checkbox value="1"/><view class="zan-cell__bd">多行列表</view>
+    </view>
+    <view class="zan-cell">
+      <checkbox value="1"/><view class="zan-cell__bd">多行列表</view>
+    </view>
+    <view class="zan-cell">
+      <checkbox value="1"/><view class="zan-cell__bd">多行列表</view>
+    </view>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
+</scroll-view>
